#2 Lemp server docker-compose phpmyadmin fixes and dockerfile composer copy removal.

--- a/lemp/docker-compose.yml
+++ b/lemp/docker-compose.yml
@@ -57,6 +57,9 @@ services:
   #phpMyAdmin Service
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    restart: unless-stopped
+    tty: true
     links:
       - db:db
     ports:
