--- a/lamp/apache/conf.d/httpd.conf
+++ b/lamp/apache/conf.d/httpd.conf
@@ -551,18 +551,22 @@ SSLRandomSeed connect builtin
 
 ServerName localhost
 
-<VirtualHost *:80>
-    ServerName localhost
-    ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/public_html/
+LoadModule deflate_module /usr/local/apache2/modules/mod_deflate.so
+LoadModule proxy_module /usr/local/apache2/modules/mod_proxy.so
+LoadModule proxy_fcgi_module /usr/local/apache2/modules/mod_proxy_fcgi.so
 
-    <Directory "/var/www/public_html/">
-       Order allow,deny
-       Allow from all
-       # New directive needed in Apache 2.4.3:
-       Require all granted
+<VirtualHost *:80>
+    # Proxy .php requests to port 9000 of the php-fpm container
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000/var/www/public/$1
+    DocumentRoot /var/www/public/
+    <Directory /var/www/public/>
+        DirectoryIndex index.php
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
     </Directory>
 
-    # ErrorLog ${APACHE_LOG_DIR}/error.log
-    # CustomLog ${APACHE_LOG_DIR}/access.log combined
+    # Send apache logs to stdout and stderr
+    CustomLog /proc/self/fd/1 common
+    ErrorLog /proc/self/fd/2
 </VirtualHost>
