--- a/lamp/docker-compose.yml
+++ b/lamp/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     environment:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
-    working_dir: /var/www
+    working_dir: /var/www/public
     volumes:
       - ./public_html:/var/www/public
       - ./php/local.ini:/etc/php/7.3/apache2/local.ini
