--- a/lemp/Dockerfile
+++ b/lemp/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:7.3-fpm
 
 # Set working directory
-WORKDIR /var/www
+WORKDIR /var/www/
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
@@ -34,10 +34,10 @@ RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
 
 # Copy existing application directory contents
-COPY . /var/www
+COPY . /var/www/
 
 # Copy existing application directory permissions
-COPY --chown=www:www . /var/www
+COPY --chown=www:www . /var/www/
 
 # Change current user to www
 USER root
