--- a/lemp/docker-compose.yml
+++ b/lemp/docker-compose.yml
@@ -13,9 +13,9 @@ services:
     environment:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
-    working_dir: /var/www
+    working_dir: /var/www/
     volumes:
-      - ./public/:/var/www
+      - ./www/:/var/www/
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
@@ -30,7 +30,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./public/:/var/www
+      - ./www/:/var/www/
       - ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - app-network
