--- a/postgresql/stack.yml
+++ b/postgresql/stack.yml
@@ -1,14 +1,17 @@
 version: '3.1'
 
 services:
-
-  db:
+   
+  database:
     image: postgres
     restart: always
+    tty: true
     environment:
       POSTGRES_USER: docker
       POSTGRES_PASSWORD: example
       POSTGRES_DB: docker
+    ports:
+      - 8081:5432
 
   adminer:
     image: adminer
